--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   font-family: Inter, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("https://images2.alphacoders.com/778/thumb-1920-77840.jpg");
+  background-image: url("https://i.pinimg.com/originals/e5/59/c5/e559c582fa17ad0f7672cd45e972b434.jpg");
   color: #fff;
   overflow-x: hidden;
 }
